-bug#0000953: SNMP Passphrase displayed in cleartext 
-bug#0000955: Possibility to create a denial of service by modifying graph image url
-bug#0000957: Script Server Output's Beginning/Trailing Data During "Include" Causing a Synchronization Issue
-bug#0000958: Slope Mode is Not Selectable  
-bug#0000959: Add Alarming When Poller Output Table is Not Empty 
-bug#0000963: TCP/UDP capitalization 
-bug: ss_sql.php was never tested and causes the script server to crash.
-bug: In an effort to make the current version of Cacti supportable, add Timeshifter.  Thanks Gandolf!
-bug: Allow query_ and host_ substitution in COMMENT and CDEF's.
-bug: Cacti does not have any way to mass add devices, graphs, tree's and permissions.
-bug: Correct index error when creating graphs when you have no hosts on your system.
-bug: More recent versions of net-snmp broke SNMP walk functions.
-bug: Adjust for problematic responses from some SNMPT Agents.
-bug: Improve logging in cmd.php and poller.php when parameters are not specified correctly.
-feature: Add rra_path as a config.php config variable
-feature: Add drop down actions to data queries
-feature: Add drop down actions to data input methods.  Hide system methods

0.8.6j
-bug#0000842: SNMPv3 password field does not check if entered passwords match.
-bug#0000848: Fix "PHP Script Server communications lost" error in the poller under high network load.
-bug#0000859: User log "purge" now keeps the last successful login.
-bug#0000861: Use downed host detection even when the SNMP community is blank.
-bug#0000864: Apply natural sort to graph items in the tree.
-bug#0000867: Apply various cleanups to poller.php and lib/poller.php.
-bug#0000870: Add sorting to the graph templates list on the "Change Graph Template" page.
-bug#0000877: Fix issue that caused PHP 5.2.0 to break the Windows cmd.php poller.
-bug#0000882: Add "collapsible" branches to the graph tree editor.
-bug#0000883: Fix exploit in cmd.php with register_argc_argv enabled in PHP.